files and javas added
Added some xml files to be able to view as grid or list for the dashboard. Added the java file for the dashboard as well to switch between the list or grid views. Made a dummy folderAdapter file while we get the real one done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string name="add_new_folder">Add</string>
+    <string name="switch_button">Switch</string>
+
 </resources>
