--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="list">List View</string>
     <string name="grid">Grid View</string>
     <string name="app_folders">H4K | Folders</string>
+    <string name="create_new_note">New Note</string>
 
 
 
